Removed erroneous CSS file from Commerce/PaySwarm vocab Editor's Drafts.

--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -33,7 +33,7 @@
  
           // if you want to have extra CSS, append them to this list
           // it is recommended that the respec.css stylesheet be kept
-          extraCSS:             ["../../respec/css/respec.css"],
+          extraCSS:             ["../../respec/css/respec.css", "prettify.css"],
  
           // editors, add as many as you like
           // only "name" is required
@@ -69,7 +69,6 @@
           wgPatentURI:  ""
       };
     </script> 
-    <link href="prettify.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="prettify.js" class="remove"></script>
     <script type="text/javascript" src="lang-jsonld.js" class="remove"></script>
     <script type="text/javascript" class="remove">
