Fixed incorrect link on SOPA page.

--- a/index-sopa.xhtml
+++ b/index-sopa.xhtml
@@ -64,7 +64,7 @@ a:hover {
 </ul>
 
 <p class="follow-up">
-<a href="index-backup.xhtml">You can still get to the PaySwarm site... for now.</a>
+<a href="index.xhtml">You can still get to the PaySwarm site... for now.</a>
 SOPA will corrupt it, stop SOPA now.
 </p>
 
