Added Editor's Draft of Web API spec for 2012-01-16.

--- a/specs/source/web-api/index.html
+++ b/specs/source/web-api/index.html
@@ -191,8 +191,8 @@
           // Team Contact.
           wgPatentURI:  "",
           maxTocLevel: 4,
-          preProcess: [ preProc ]//,
-          //alternateFormats: [ {uri: "diff-20110926.html", label: "diff to previous version"} ],
+          preProcess: [ preProc ],
+          alternateFormats: [ {uri: "diff-20111214.html", label: "diff to previous version"} ],
       };
     </script> 
     <script type="text/javascript" src="prettify.js" class="remove"></script>
