Updated SOPA/PIPA blackout page to include PIPA since SOPA is all but dead.

--- a/index-sopa.xhtml
+++ b/index-sopa.xhtml
@@ -50,7 +50,7 @@ a:hover {
 <body>
 
 <ul class="big-deal">
-   <li>SOPA BLACKOUT PROTEST</li>
+   <li>SOPA/PIPA BLACKOUT PROTEST</li>
    <li>&nbsp;</li>
    <li>We are building an open, </li>
    <li>Universal Commerce Standard for the Web.</li>
@@ -60,12 +60,12 @@ a:hover {
    <li>and unchecked takedown notices</li>
    <li>thus killing innovation in thousands of new start-ups.</li>
    <li>&nbsp;</li>
-   <li><a class="red" href="http://engineadvocacy.com/voice/">Urge your representative to STOP SOPA</a></li>
+   <li><a class="red" href="http://engineadvocacy.com/voice/">Urge your representative to STOP SOPA/PIPA</a></li>
 </ul>
 
 <p class="follow-up">
 <a href="index.xhtml">You can still get to the PaySwarm site... for now.</a>
-SOPA will corrupt it, stop SOPA now.
+SOPA/PIPA will corrupt it, stop SOPA/PIPA now.
 </p>
 
 <script type="text/javascript">
