--- a/specs/source/vocabs/commerce.html
+++ b/specs/source/vocabs/commerce.html
@@ -1337,7 +1337,7 @@ calculation among a list of Payees.
           <dt>Domain</dt>
           <dd>com:Payee, owl:Thing</dd>
           <dt>Range</dt>
-          <dd>com:InclusivePayee, com:ExclusivePayee, com:FlatAmount, rdfs:Class, xsd:string</dd>
+          <dd>com:InclusivePercentage, com:ExclusivePercentage, com:FlatAmount, rdfs:Class, xsd:string</dd>
         </dl>
         <p>
 The example below specifies an exclusive percentage rate type
